Fix migrations not migrating

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -16,5 +16,9 @@ COPY . .
 # Expose the port the app runs on
 EXPOSE 8000
 
+RUN python manage.py makemigrations
+
 # Command to run migrations and then start the Django server
 CMD ["sh", "-c", "python manage.py migrate && python manage.py runserver_plus 0.0.0.0:8000"]
+
+
