--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,8 +1,10 @@
 asgiref==3.8.1
 Django==5.1.1
 django-extensions==3.2.3
+djangorestframework==3.15.2
 MarkupSafe==2.1.5
 psycopg2-binary==2.9.9
 sqlparse==0.5.1
+tornado==6.4.1
 typing_extensions==4.12.2
 Werkzeug==3.0.4
