--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -20,3 +20,5 @@ RUN apt-get update
 RUN pip install --upgrade pip
 COPY ./requirements.txt /app/
 RUN pip install -r requirements.txt
+
+CMD ["python", "manage.py", "runserver", "0.0.0.0:8000"]
