--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,7 +1,9 @@
 asgiref==3.8.1
-Django==5.1.1
+Django==4.2.16
 django-extensions==3.2.3
+django-livereload-server==0.5.1
 djangorestframework==3.15.2
+livereload==2.7.0
 MarkupSafe==2.1.5
 psycopg2-binary==2.9.9
 sqlparse==0.5.1
