--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
 backend/venv/
 frontend/node_modules
 **/__pycache__/
-backend/effbi_api/migrations/0001_initial.py
+backend/effbi_api/migrations/*.py
