--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 backend/venv/
 frontend/node_modules
-**/__pycache__/
-backend/effbi_api/migrations/*.py
 frontend/package-lock.json
+**/__pycache__/
+.env
+backend/effbi_api/migrations/*.py
