--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@heroicons/react": "^2.1.5",
     "@material-tailwind/react": "^2.1.10",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -19,9 +20,11 @@
     "@types/react": "^18.2.19",
     "@types/react-dom": "^18.3.0",
     "axios": "^1.7.7",
+    "emailjs-com": "^3.2.0",
     "next": "^14.2.14",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.3.0",
     "react-router-dom": "^6.2.1",
     "react-scripts": "^3.0.1",
     "supertokens-auth-react": "latest",
