--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,50 +1,50 @@
 {
-  "name": "eff-bi",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "tsc -b && vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "@heroicons/react": "^2.1.5",
-    "@material-tailwind/react": "^2.1.10",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
-    "@types/node": "^22.7.4",
-    "@types/react": "^18.2.19",
-    "@types/react-dom": "^18.3.0",
-    "axios": "^1.7.7",
-    "emailjs-com": "^3.2.0",
-    "next": "^14.2.14",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-icons": "^5.3.0",
-    "react-router-dom": "^6.2.1",
-    "react-scripts": "^3.0.1",
-    "supertokens-auth-react": "latest",
-    "supertokens-web-js": "^0.13.0",
-    "web-vitals": "^2.1.4"
-  },
-  "devDependencies": {
-    "@eslint/js": "^9.9.0",
-    "@types/react": "^18.2.19",
-    "@types/react-dom": "^18.3.0",
-    "@vitejs/plugin-react": "^4.3.2",
-    "autoprefixer": "^10.4.20",
-    "eslint": "^9.9.0",
-    "eslint-plugin-react-hooks": "^5.1.0-rc.0",
-    "eslint-plugin-react-refresh": "^0.4.9",
-    "globals": "^15.9.0",
-    "postcss": "^8.4.47",
-    "tailwindcss": "^3.4.13",
-    "typescript": "^3.9.10",
-    "typescript-eslint": "^8.0.1",
-    "vite": "^5.4.1"
-  }
+    "name": "eff-bi",
+    "private": true,
+    "version": "0.0.0",
+    "type": "module",
+    "scripts": {
+        "dev": "vite",
+        "build": "tsc -b && vite build",
+        "lint": "eslint .",
+        "preview": "vite preview"
+    },
+    "dependencies": {
+        "@material-tailwind/react": "^2.1.10",
+        "@react-spring/web": "^9.7.4",
+        "@testing-library/jest-dom": "^6.5.0",
+        "@testing-library/react": "^16.0.1",
+        "@testing-library/user-event": "^14.5.2",
+        "@visx/stats": "^3.5.0",
+        "@visx/visx": "^3.11.0",
+        "axios": "^1.7.7",
+        "@emailjs/browser": "^4.0.3",
+        "papaparse": "^5.4.1",
+        "react": "^18.3.1",
+        "react-dom": "^18.3.1",
+        "react-icons": "^5.3.0",
+        "react-router-dom": "^6.26.2",
+        "supertokens-auth-react": "latest",
+        "supertokens-web-js": "^0.13.0",
+        "web-vitals": "^4.2.3"
+    },
+    "devDependencies": {
+        "@eslint/js": "^9.12.0",
+        "@types/jest": "^29.5.13",
+        "@types/node": "^22.7.4",
+        "@types/papaparse": "^5.3.14",
+        "@types/react": "^18.3.11",
+        "@types/react-dom": "^18.3.0",
+        "@vitejs/plugin-react": "^4.3.2",
+        "autoprefixer": "^10.4.20",
+        "eslint": "^9.12.0",
+        "eslint-plugin-react-hooks": "^5.1.0-rc.0",
+        "eslint-plugin-react-refresh": "^0.4.12",
+        "globals": "^15.10.0",
+        "postcss": "^8.4.47",
+        "tailwindcss": "^3.4.13",
+        "typescript": "^5.6.2",
+        "typescript-eslint": "^8.8.0",
+        "vite": "^5.4.8"
+    }
 }
