--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,15 +16,19 @@
         "@material-tailwind/react": "^2.1.10",
         "@mui/icons-material": "^6.1.2",
         "@mui/material": "^6.1.2",
+        "@phosphor-icons/react": "^2.1.7",
         "@react-spring/web": "^9.7.4",
         "@testing-library/jest-dom": "^6.5.0",
         "@testing-library/react": "^16.0.1",
         "@testing-library/user-event": "^14.5.2",
         "@visx/stats": "^3.5.0",
         "@visx/visx": "^3.11.0",
+        "apexcharts": "^3.54.0",
         "axios": "^1.7.7",
+        "next": "^14.2.14",
         "papaparse": "^5.4.1",
         "react": "^18.3.1",
+        "react-apexcharts": "^1.4.1",
         "react-dom": "^18.3.1",
         "react-icons": "^5.3.0",
         "react-router-dom": "^6.26.2",
