--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@emailjs/browser": "^4.0.3",
         "@material-tailwind/react": "^2.1.10",
         "@react-spring/web": "^9.7.4",
         "@testing-library/jest-dom": "^6.5.0",
@@ -18,7 +19,7 @@
         "@visx/stats": "^3.5.0",
         "@visx/visx": "^3.11.0",
         "axios": "^1.7.7",
-        "@emailjs/browser": "^4.0.3",
+        "emailjs": "^4.0.3",
         "papaparse": "^5.4.1",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
