--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,6 +32,7 @@
         "react-dom": "^18.3.1",
         "react-icons": "^5.3.0",
         "react-router-dom": "^6.26.2",
+        "react-toastify": "^10.0.5",
         "supertokens-auth-react": "latest",
         "supertokens-web-js": "^0.13.0",
         "web-vitals": "^4.2.3"
