--- a/frontend/package.json
+++ b/frontend/package.json
@@ -42,7 +42,7 @@
         "@types/jest": "^29.5.13",
         "@types/node": "^22.7.4",
         "@types/papaparse": "^5.3.14",
-        "@types/react": "^18.3.11",
+        "@types/react": "18.2.42",
         "@types/react-dom": "^18.3.0",
         "@vitejs/plugin-react": "^4.3.2",
         "autoprefixer": "^10.4.20",
