--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
         "@emailjs/browser": "^4.0.3",
         "@emotion/react": "^11.13.3",
         "@emotion/styled": "^11.13.0",
+        "@heroicons/react": "^2.1.5",
         "@material-tailwind/react": "^2.1.10",
         "@mui/icons-material": "^6.1.2",
         "@mui/material": "^6.1.2",
@@ -21,6 +22,7 @@
         "@testing-library/jest-dom": "^6.5.0",
         "@testing-library/react": "^16.0.1",
         "@testing-library/user-event": "^14.5.2",
+        "@types/react-router-dom": "^5.3.3",
         "@visx/stats": "^3.5.0",
         "@visx/visx": "^3.11.0",
         "apexcharts": "^3.54.0",
