--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,6 +31,7 @@
         "papaparse": "^5.4.1",
         "react": "^18.3.1",
         "react-apexcharts": "^1.4.1",
+        "react-beautiful-dnd": "^13.1.1",
         "react-dom": "^18.3.1",
         "react-icons": "^5.3.0",
         "react-router-dom": "^6.26.2",
@@ -45,6 +46,7 @@
         "@types/node": "^22.7.4",
         "@types/papaparse": "^5.3.14",
         "@types/react": "18.2.42",
+        "@types/react-beautiful-dnd": "^13.1.8",
         "@types/react-dom": "^18.3.0",
         "@vitejs/plugin-react": "^4.3.2",
         "autoprefixer": "^10.4.20",
