--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -22,6 +22,7 @@ exceptiongroup==1.2.2
 filelock==3.16.1
 frozenlist==1.4.1
 greenlet==3.1.1
+gunicorn==23.0.0
 h11==0.14.0
 httpcore==1.0.6
 httpx==0.26.0
@@ -31,6 +32,7 @@ jsonpatch==1.33
 jsonpointer==3.0.0
 langchain==0.3.3
 langchain-core==0.3.10
+langchain-openai==0.2.2
 langchain-text-splitters==0.3.0
 langsmith==0.1.134
 livereload==2.7.0
@@ -52,6 +54,7 @@ PyJWT==2.9.0
 python-dotenv==1.0.1
 pytz==2024.2
 PyYAML==6.0.2
+regex==2024.9.11
 requests==2.32.3
 requests-file==2.1.0
 requests-toolbelt==1.0.0
@@ -60,6 +63,7 @@ SQLAlchemy==2.0.35
 sqlparse==0.5.1
 supertokens-python==0.24.3
 tenacity==8.5.0
+tiktoken==0.8.0
 tldextract==3.1.0
 tornado==6.4.1
 tqdm==4.66.5
