--- a/frontend/.env
+++ b/frontend/.env
@@ -1,4 +1,4 @@
 VITE_BACKEND_PORT=8000
-VITE_BACKEND_URL=http://localhost:8000
+VITE_BACKEND_URL=https://eff-bi.onrender.com
 VITE_FRONTEND_PORT=3000
 VITE_FRONTEND_URL=http://localhost:3000
