--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,8 @@
         "@emotion/styled": "^11.13.0",
         "@heroicons/react": "^2.1.5",
         "@material-tailwind/react": "^2.1.10",
-        "@mui/icons-material": "^6.1.2",
+        "@mui/icons-material": "^6.1.4",
+        "@mui/lab": "^6.0.0-beta.12",
         "@mui/material": "^6.1.2",
         "@phosphor-icons/react": "^2.1.7",
         "@react-spring/web": "^9.7.4",
