--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,11 +31,13 @@
         "html2canvas": "^1.4.1",
         "next": "^14.2.14",
         "papaparse": "^5.4.1",
+        "prettier-sql": "^5.1.1",
         "react": "^18.3.1",
         "react-apexcharts": "^1.4.1",
         "react-dom": "^18.3.1",
         "react-icons": "^5.3.0",
         "react-router-dom": "^6.26.2",
+        "react-syntax-highlighter": "^15.6.1",
         "react-toastify": "^10.0.5",
         "supertokens-auth-react": "latest",
         "supertokens-web-js": "^0.13.0",
@@ -49,6 +51,7 @@
         "@types/react": "18.2.42",
         "@types/react-beautiful-dnd": "^13.1.8",
         "@types/react-dom": "^18.3.0",
+        "@types/react-syntax-highlighter": "^15.5.13",
         "@vitejs/plugin-react": "^4.3.2",
         "autoprefixer": "^10.4.20",
         "eslint": "^9.12.0",
