--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,7 @@
         "apexcharts": "^3.54.0",
         "axios": "^1.7.7",
         "html2canvas": "^1.4.1",
+        "lucide-react": "^0.453.0",
         "next": "^14.2.14",
         "papaparse": "^5.4.1",
         "prettier-sql": "^5.1.1",
