--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,11 +18,13 @@
         "@mui/icons-material": "^6.1.4",
         "@mui/lab": "^6.0.0-beta.12",
         "@mui/material": "^6.1.2",
+        "@mui/toolpad": "^0.1.51",
         "@phosphor-icons/react": "^2.1.7",
         "@react-spring/web": "^9.7.4",
         "@testing-library/jest-dom": "^6.5.0",
         "@testing-library/react": "^16.0.1",
         "@testing-library/user-event": "^14.5.2",
+        "@toolpad/core": "^0.8.1",
         "@types/react-router-dom": "^5.3.3",
         "@visx/stats": "^3.5.0",
         "@visx/visx": "^3.11.0",
