--- a/frontend/.env
+++ b/frontend/.env
@@ -2,3 +2,4 @@ VITE_BACKEND_PORT=8000
 VITE_BACKEND_URL=http://localhost:8000
 VITE_FRONTEND_PORT=3000
 VITE_FRONTEND_URL=http://localhost:3000
+VITE_DOCS_URL=https://eff-bi-docs.vercel.app
