Fix UI for permissions

--- a/frontend/.env
+++ b/frontend/.env
@@ -1,5 +1,5 @@
 VITE_BACKEND_PORT=8000
-VITE_BACKEND_URL=https://eff-bi-139910315407.asia-southeast1.run.app
+VITE_BACKEND_URL=http://localhost:8000
 VITE_FRONTEND_PORT=3000
 VITE_FRONTEND_URL=http://localhost:3000
 VITE_DOCS_URL=https://eff-bi-docs.vercel.app
