--- a/effbi-docs/blog/authors.yml
+++ b/effbi-docs/blog/authors.yml
@@ -1,16 +1,16 @@
 vaishnav:
   name: Vaishnav Muralidharan
-  title: Founder @ Effbi
+  title: Founder @ EffBI
   url: https://www.linkedin.com/in/vaishnav-m-73a8366a/
   image_url: https://github.com/Vshnv2001.png
   page: true
   socials:
-    linkedin: vaishnavmuralidharan
+    linkedin: vaishnav-m-73a8366a
     github: Vshnv2001
 
 justin:
   name: Justin Tan
-  title: Founder @ Effbi
+  title: Founder @ EffBI
   url: https://www.linkedin.com/in/tan-wee-kian-justin/
   image_url: https://github.com/jyztintan.png
   page: true
@@ -20,7 +20,7 @@ justin:
 
 reyaaz:
   name: Muhammad Reyaaz
-  title: Founder @ Effbi
+  title: Founder @ EffBI
   url: https://www.linkedin.com/in/muhammad-reyaaz/
   image_url: https://github.com/ARPspoofing.png
   page: true
@@ -30,7 +30,7 @@ reyaaz:
 
 bryan:
   name: Bryan Ho
-  title: Founder @ Effbi
+  title: Founder @ EffBI
   url: https://www.linkedin.com/in/bryanhce/
   image_url: https://github.com/bryanhce.png
   page: true
