--- a/frontend/.env
+++ b/frontend/.env
@@ -3,4 +3,4 @@ VITE_BACKEND_URL=http://localhost:8000
 VITE_FRONTEND_PORT=3000
 VITE_FRONTEND_URL=http://localhost:3000
 VITE_DOCS_URL=https://eff-bi-docs.vercel.app
-VITE_MOCK_DATA_URI=postgresql://effbiuser:effortless@34.126.153.243:5432/mock-salary-db
+VITE_MOCK_DATA_URI=postgres://view_user:testeffbi@pg-effbi-mock-justintanwk2001-6f2d.l.aivencloud.com:18828/defaultdb
